--- a/styles/login.css
+++ b/styles/login.css
@@ -11,11 +11,21 @@
     font-family: "Coolvetica";
 
 }
+body
+{
+    padding: 10px;
+}
 .container
 {
     width: 100%;
     height: 100%;
    display: flex;
+   border: 1px solid gray;
+   border-radius: 10px;
+   box-shadow: 2px 7px 25px 5px rgba(116,115,115,0.75);
+    -webkit-box-shadow: 2px 7px 25px 5px rgba(116,115,115,0.75);
+    -moz-box-shadow: 2px 7px 25px 5px rgba(116,115,115,0.75);
+    overflow: hidden;
 }
 .signIn
 {
