--- a/styles/about.css
+++ b/styles/about.css
@@ -70,13 +70,14 @@ align-items: center;
    display: flex;
    justify-content: center;
    padding: 15px;
+  
    padding-bottom: 0;
 }
     .content
     {
         width: 85%;
         height: 100vh;
-        background-color:rgba(0,0,0,0.7);
+        background-color:rgb(0,0,0,0.3);
         padding: 10px;
     }
         .contentTitle
@@ -149,6 +150,11 @@ align-items: center;
                     row-gap: 15px;
                     margin-top: 10px;
                 }
+                    p
+                    {
+                         text-align: justify;
+                        text-justify: inter-word; 
+                    }
                 .birthday
                 {
                     grid-area: birthday;
@@ -243,3 +249,51 @@ align-items: center;
                     position: relative;
                     bottom: 10px;
                 }
+@media screen and (max-width:768px) {
+    .navbar
+    {
+        flex-direction: column;
+       align-items: flex-start;
+    }
+    .navbarTitle
+    {
+        margin-bottom: 10px;
+        font-size: 20px;
+    }
+    a
+        {
+            font-size:16px;
+        }
+     .content
+    {
+        height: auto;
+    }
+    .container
+    {
+        height: auto;
+    } 
+    .contentBody
+    {
+        grid-template-areas: 
+        "personalImage"
+        "personalInformations"
+        "dataBoxes"
+        ;
+        grid-template-columns: 1fr;
+        grid-template-rows: auto;
+        row-gap: 0;
+    }
+    .personalImage
+    {
+        height:600px;
+        background-size:contain;
+        background-repeat: no-repeat;
+    }
+    .dataBoxes
+    {
+        grid-template-areas:
+        "box1 box2 "
+        "box3 box4";
+        grid-template-columns: 1fr 1fr ;
+    }
+}
